# iam-looker

./: .checkov.yaml  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .markdownlint.json  .mega-linter.yml  .pre-commit-config.yaml  .secrets.baseline  .tflint.hcl  .yamllint.yaml  .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  NOTICE.md  README.md  README_ARCHITECTURE.md  SECURITY.md  SPEC.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: WORKFLOWS.md  copilot-instructions.md  dependabot.yml  pull_request_template.md  terraform.agent.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  codeql.yml  deploy-cloud-functions.yml  deploy-terraform.yml  mega-linter.yml  pr-comment-ci.yml  pr-comment-coverage.yml  pr-status-summary.yml  release.yml  secret-scanning.yml  security-scan.yml
cloud_function/: main.py
docs/: LOOKER_API.md  TERRAFORM_DEPLOYMENT.md
functions/: __init__.py  main.py
scripts/: __init__.py  bootstrap_looker.py
src/: __init__.py  config.py  dashboard_template.py  looker_provisioner.py
src/cloud_functions/: __init__.py  add_group_to_saml.py  common.py  create_dashboard_from_template.py  create_project_folder.py
src/iam_looker/: __init__.py  cli.py  exceptions.py  handler.py  json_logging.py  logging.py  models.py  provisioner.py  settings.py  templates.py
src/iam_looker/functions/: add_group_to_saml.py  create_dashboard_from_template.py  create_project_folder.py
terraform/: .terraform.lock.hcl  TERRAFORM.md  backend.tf  functions.tf  http_functions.tf  main.tf  main.tftest.hcl  openapi_template.yaml  outputs.tf  providers.tf  tftest.hcl  variables.tf
terraform/modules/wif_github/: README.md  main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_handler.py  test_provisioner.py  test_provisioner_advanced.py
