[project]
name = "iam-looker"
version = "0.1.2"
description = "Looker user onboarding automation"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.14.0",
    "mypy>=1.18.0",
    "bandit>=1.9.0",
    "pre-commit>=4.5.0",
    "pydantic>=2.7.0",
]

# Pytest configuration
[tool.pytest.ini_options]
python_files = ["tests/*.py"]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers --tb=short"

# Ruff configuration - Modern Python linter (2025 best practices)
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "RUF",   # Ruff-specific rules
]
ignore = [
    "S101",   # Allow assert statements in tests
    "T201",   # Allow print statements (can be removed for production)
    "ARG001", # Allow unused function arguments (Cloud Functions context)
    "ARG002", # Allow unused method arguments
    "B904",   # Allow raise without from (legacy code)
    "E501",   # Allow lines over 100 characters (will fix gradually)
    "RUF005", # Allow list concatenation (more readable than unpacking)
    "N805",   # Allow cls in Pydantic validators
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "ARG002", "B011", "PTH118", "PTH120"]
"__init__.py" = ["F401"]
"src/iam_looker/models.py" = ["N815"]  # Allow mixedCase for Pydantic models (JSON serialization)
"src/config.py" = ["SIM105"]  # Allow try-except-pass pattern
"functions/*.py" = ["ARG001"]  # Cloud Functions require context parameter
"src/cloud_functions/*.py" = ["ARG001"]  # Cloud Functions require context parameter
"src/iam_looker/functions/*.py" = ["ARG001"]  # Cloud Functions require context parameter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# MyPy configuration - Static type checking
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = true

# Bandit configuration - Security linting
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Allow assert in test files

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

# Black compatibility (deprecated, use ruff format instead)
[tool.black]
line-length = 100
target-version = ["py312"]
